fix spacing of table

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -991,7 +991,7 @@ hr {
 
   td {
     min-width: 8em;
-    border-spacing: .4em;
+    padding: .4em;
   }
 }
 
